spacing fixes

--- a/src/components/SectionContainer/SectionContainer.module.scss
+++ b/src/components/SectionContainer/SectionContainer.module.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     align-items: center;
 
     @media (max-width: $mantine-breakpoint-sm) {
